<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Battery Benchmark</string>
    <string name="launch_text">Start bench</string>
    <string name="TestDuration">Test duration</string>
    <string name="started_test">Started test</string>
    <string name="dix_minutes">10 minutes (test only no result) *</string>
    <string name="cinq_pourcent">Short bench  (5%, not reliable results)</string>
    <string name="trente_secondes">30 seconds (test only no result) *</string>
    <string name="une_heure">one hour</string>
    <string name="epuisement">Long bench (50%, not so bad reliability)</string>
    <string name="unknown">Unknown status</string>
    <string name="GPS">GPS</string>
    <string name="WiFi">WiFi</string>
    <string name="DataNet">Data network</string>
    <string name="CPU">CPU</string>
    <string name="OffLine">Offline</string>
    <string name="OnLine">Online</string>
    <string name="Working">Working</string>
    <string name="Sleeping">Sleeping</string>
    <string name="Waiting">Waiting</string>
    <string name="BlueTooth">BlueTooth</string>
    <string name="Scanning">Scanning</string>
    <string name="do_stop_test">Stop bench</string>
    <string name="do_restart_text">Restart bench</string>
    <string name="battery_level">Battery level:</string>
    <string name="iteration">Loop</string>
    <string name="downloaded_chars">downloaded caracters</string>
    <string name="cheat_detected">Cheating attempt detected</string>
    <string name="charger_plugged">Charger plugged</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="completed_test">Test completed</string>
    <string name="started_at">Started at</string>
    <string name="cancelled_test">Test cancelled</string>
    <string name="bluetooth_must">Bluetooth must be enabled</string>
    <string name="gps_must">GPS must be enabled</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="not_installed">Not installed</string>
    <string name="alert">Alert</string>
    <string name="about">About</string>
    <string name="quit">Exit</string>
    <string name="not_sent_results">Problem sending results to server</string>
    <string name="sent_results">Results sent to server</string>
    <string name="will_wake_in">will wake in</string>
    <string name="saved_results">Problem sending results to server, data saved for future transmission</string>
    <string name="send_results_attempt">Trying to send results to server</string>
    <string name="signal_strength">Signal strength</string>
    <string name="sleep_delay">Sleep in</string>
    <string name="no_3G">no mobile phone module</string>
    <string name="phone_module">mobile phone module</string>
    <string name="start">start</string>
    <string name="current">current</string>
    <string name="about_text">Battery Benchmark, by Georges DICK (http://georgesdick.com)</string>
    <string name="load_min_40_pcent">No test possible with battery level at 40% or less</string>
    <string name="results">Results</string>
    <string name="wait4load">Loading results....</string>
    <string name="board">Board: </string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="brand">Brand: </string>
    <string name="android_version">Android version: </string>
    <string name="app_description">Battery benchmark app for Android. Just select the test type, leave your device alone (maybe several hours), and watch it working!</string>
    <string name="model">Model: </string>
    <string name="ok">OK</string>
    <string name="afond">Full bench (The real one: 100% to "lights out")</string>
    <string name="long_test_need_90_pcent">For a long test, your battery level must be at least at 90%</string>
    <string name="full_test_need_100_pcent">For a full test, your battery level must be full (100%)</string>
    <string name="detected">detected</string>
    <string name="thanks_to">Special thanks to:</string>
</resources>
