<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    <TextView
    	android:layout_width="fill_parent"
    	android:text="@string/app_description"
    	android:layout_height="wrap_content"
    	android:id="@+id/AppDesc"
    	>
    </TextView>
	<TextView
	    android:id="@+id/ThanksTo"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/thanks_to" />
    <ImageButton
        android:id="@+id/imgLesNumeriques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logolesnumeriques" />
    <TextView
    	android:layout_width="fill_parent"
    	android:text="@string/app_name"
    	android:layout_height="wrap_content"
    	android:id="@+id/TypeText"
    	>
    </TextView>
    <TextView
    	android:text="@string/app_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/AutoText"
    	>
    </TextView>
    <RadioGroup
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:id="@+id/dureeRadioGroup"
    	>
    	 <RadioButton
        	android:layout_height="wrap_content"
        	android:id="@+id/afond"
        	android:text="@string/afond"
        	android:layout_width="wrap_content"
        	android:checked="true"
        	>
        </RadioButton>
         <RadioButton
        	android:layout_height="wrap_content"
        	android:id="@+id/epuisement"
        	android:text="@string/epuisement"
        	android:layout_width="wrap_content"
        	android:checked="false"
        	>
        </RadioButton>
        <RadioButton
        	android:layout_height="wrap_content"
        	android:id="@+id/cinq_pourcent"
        	android:text="@string/cinq_pourcent"
        	android:layout_width="wrap_content"
        	android:checked="false"
        	>
        </RadioButton>
        <RadioButton
        	android:layout_height="wrap_content"
        	android:id="@+id/trente_secondes"
        	android:text="@string/trente_secondes"
        	android:layout_width="wrap_content"
        	android:checked="false"
        	>
        </RadioButton>
        <RadioButton
        	android:layout_height="wrap_content"
        	android:id="@+id/dix_minutes"
        	android:text="@string/dix_minutes"
        	android:layout_width="wrap_content"
        	android:checked="false"
        	>
        </RadioButton>
    </RadioGroup>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		>
		<Button
			android:id="@+id/Bouton"
	        android:textStyle="bold"
        	android:layout_height="wrap_content"
        	android:layout_width="200px"
        	android:text="@string/launch_text"
        	android:layout_gravity="center"
        	/>
	</LinearLayout>
</LinearLayout>
