<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/ActionFullLayout"
    >
	<TextView
		android:layout_width="fill_parent"
		android:text="@string/TestDuration"
		android:layout_height="wrap_content"
		android:id="@+id/TestDuration"
		/>
	<TextView
		android:layout_width="fill_parent"
		android:text="@string/elapsed_time"
		android:layout_height="wrap_content"
		android:id="@+id/TextElapsedTime"
		/>
	<TextView
		android:layout_width="fill_parent"
		android:text="@string/sleep_delay"
		android:layout_height="wrap_content"
		android:id="@+id/TextSleepWake"
		/>
	<TextView
		android:layout_width="fill_parent"
		android:text="@string/signal_strength"
		android:layout_height="wrap_content"
		android:id="@+id/TextSignalStrength"
		/>
	<TextView
		android:layout_width="fill_parent"
		android:text="@string/battery_level"
		android:layout_height="wrap_content"
		android:id="@+id/TextBatteryLevel"
		/>
	<TextView
	    android:text="@string/started_test"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/ActionAutoText"
	    />
	<TextView
	    android:text="@string/started_test"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/HttpResuText"
	    />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:id="@+id/layoutEtatGPS"
	    >
	    <TextView
		    android:text="@string/GPS"
		    android:layout_width="70px"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    />
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:src="@drawable/unknown"
			android:id="@+id/imageEtatGPS"
			/>
	    <TextView
		    android:text="@string/unknown"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:id="@+id/textEtatGPS"
		    />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:id="@+id/layoutEtatWiFi"
	    >
	    <TextView
		    android:text="@string/WiFi"
		    android:layout_width="70px"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    />
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:src="@drawable/unknown"
			android:id="@+id/imageEtatWiFi"
			/>
	    <TextView
		    android:text="@string/unknown"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:id="@+id/textEtatWiFi"
		    />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:id="@+id/layoutEtatDataNet"
	    >
	    <TextView
		    android:text="@string/DataNet"
		    android:layout_width="70px"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    />
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:src="@drawable/unknown"
			android:id="@+id/imageEtatDataNet"
			/>
	    <TextView
		    android:text="@string/unknown"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:id="@+id/textEtatDataNet"
		    />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:id="@+id/layoutEtatCPU"
	    >
	    <TextView
		    android:text="@string/CPU"
		    android:layout_width="70px"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    />
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:src="@drawable/unknown"
			android:id="@+id/imageEtatCPU"
			/>
	    <TextView
		    android:text="@string/unknown"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:id="@+id/textEtatCPU"
		    />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:id="@+id/layoutEtatBlueTooth"
	    >
	    <TextView
		    android:text="@string/BlueTooth"
		    android:layout_width="70px"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    />
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:src="@drawable/unknown"
			android:id="@+id/imageEtatBlueTooth"
			/>
	    <TextView
		    android:text="@string/unknown"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:id="@+id/textEtatBlueTooth"
		    />
	</LinearLayout>
</LinearLayout>
